[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Menu/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://gfx/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/Menu/MainMenu.gd" type="Script" id=3]

[node name="MainMenu" instance=ExtResource( 1 )]
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="." index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" index="0"]
margin_left = 497.0
margin_top = 329.0
margin_right = 847.0
margin_bottom = 631.0
custom_constants/separation = 50

[node name="Campaign" type="Button" parent="CenterContainer/VBoxContainer" index="0"]
margin_right = 350.0
margin_bottom = 38.0
rect_min_size = Vector2( 350, 0 )
text = "Campaign"

[node name="IndividualGame" type="Button" parent="CenterContainer/VBoxContainer" index="1"]
margin_top = 88.0
margin_right = 350.0
margin_bottom = 126.0
text = "Individual Game"

[node name="Help" type="Button" parent="CenterContainer/VBoxContainer" index="2"]
margin_top = 176.0
margin_right = 350.0
margin_bottom = 214.0
text = "Help"

[node name="Credits" type="Button" parent="CenterContainer/VBoxContainer" index="3"]
margin_top = 264.0
margin_right = 350.0
margin_bottom = 302.0
text = "Credits"

[node name="TwoPlayer" type="Button" parent="CenterContainer/VBoxContainer" index="4"]
visible = false
margin_top = 170.0
margin_right = 350.0
margin_bottom = 205.0
text = "Two Player"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer" index="5"]
visible = false
margin_top = 170.0
margin_right = 350.0
margin_bottom = 205.0
text = "Exit"
[connection signal="pressed" from="CenterContainer/VBoxContainer/Campaign" to="." method="_on_Campaign_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/IndividualGame" to="." method="_on_IndividualGame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/TwoPlayer" to="." method="_on_TwoPlayer_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
